# vectorcade-web-yew

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt  status.md
pages/: index.html  vectorcade-web-yew-597caa6908aa9683.js  vectorcade-web-yew-597caa6908aa9683_bg.wasm  vectorcade-web-yew-d6890a1031ec52e2.js  vectorcade-web-yew-d6890a1031ec52e2_bg.wasm  vectorcade-web-yew-f81a2b3444c7efc7.js  vectorcade-web-yew-f81a2b3444c7efc7_bg.wasm
vectorcade-web-yew/: Cargo.toml  README.md  build.rs  index.html
vectorcade-web-yew/src/: main.rs
