[package]
name = "vectorcade-web-yew"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.11"

vectorcade-shared = { version = "0.1.0" }
vectorcade-games = { version = "0.1.0" }
vectorcade-render-wgpu = { version = "0.1.0" }

[profile.release]
lto = true
opt-level = "s"
