[package]
name = "vectorcade-web-yew"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.11"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
] }
console_error_panic_hook = "0.1"

vectorcade-shared = { version = "0.1.0" }
vectorcade-fonts = { version = "0.1.0" }
vectorcade-games = { version = "0.1.0" }
vectorcade-render-wgpu = { version = "0.1.0" }

[profile.release]
lto = true
opt-level = "s"
